--- a/Ask1/index.html
+++ b/Ask1/index.html
@@ -72,7 +72,8 @@
                         <li>
                             <h4>Πανεπιστήμιο Κρήτης</h4>
                             <ul>
-                                <li>Προπτυχιακός φοιτητης επιστημης υπολογιστων</li>
+                                <li><a href="https://www.csd.uoc.gr/" target="_blank">
+                                        Προπτυχιακός φοιτητης επιστημης υπολογιστων</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -82,13 +83,29 @@
                     <h3>Ενδιαφέροντα</h3>
                     <ul>
                         <li>
-                            <h5>Τεχνολογία</h5>
-                        </li>
-                        <li>
-                            <h5>Ταξίδια</h5>
-                        </li>
-                        <li>
                             <h5>Αθλητισμός</h5>
+                            <p> - Playmaker at Zafeirakis BC </p>
+                            <a href="https://www.paobc.gr/en" target="_blank">
+                                <img src="images/pao.png" alt="This is a picture of my team" height="200">
+                            </a>
+
+                        </li>
+                        <li>
+                            <h5>Gaming</h5>
+                            <p> - Pro Rainbow Six Siege player</p>
+                            <!-- Less than 1MB.... -->
+                            <video width="300px" controls muted>
+                                <source src="video/gaming.mp4" type="video/mp4">
+                                <!-- I remove the webm file -->
+                                <source src="video/gaming.webm" type="video/webm">
+
+                            </video>
+                        </li>
+                        <li>
+                            <h5>Συγγραφέας Παραμυθιών/Αφηγητής</h5>
+                            <audio controls autoplay muted loop>
+                                <source src="audio/FairyTale.mp3" type="audio/mp3">
+                            </audio>
                         </li>
                     </ul>
                 </section>
@@ -99,24 +116,16 @@
                 <div class="card">
                     <div class="card-header">Find me on:</div>
                     <div class="card-body">
-                        <ul>
-                            <li>
-                                <a href="https://www.instagram.com/_alex_manos/" target="_blank">
-                                    <i class="fa-brands fa-instagram fa-4x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/almanos/" target="_blank">
-                                    <i class="fa-brands fa-linkedin-in fa-4x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/AlexandrosManos" target="_blank">
-                                    <i class="fa-brands fa-github fa-4x" style="color: #74C0FC;"></i>
-                                </a>
-                            </li>
+                        <a href="https://www.instagram.com/_alex_manos/" target="_blank">
+                            <i class="fa-brands fa-instagram fa-4x"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/almanos/" target="_blank">
+                            <i class="fa-brands fa-linkedin-in fa-4x"></i>
+                        </a>
+                        <a href="https://github.com/AlexandrosManos" target="_blank">
+                            <i class="fa-brands fa-github fa-4x"></i>
+                        </a>
 
-                        </ul>
                     </div>
                 </div>
             </aside>
