--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -7,26 +7,20 @@
     <meta name="description" content="Βιογραφικό">
     <meta name="keywords" content="βιογραφικό, σπουδές, ενδιαφέροντα, προσωπική ιστοσελίδα">
     <meta name="author" content="Alexandros Manos">
+    <title>Resume</title>
+
     <link rel="stylesheet" href="style.css">
     <!--               Custom Fonts            -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
-    <!-- ----------------------------------------------------------------------------------------- -->
+    <!--  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <!-- Icons                   -->
     <script src="https://kit.fontawesome.com/c9a18265b7.js" crossorigin="anonymous"></script>
-
-    <!-- Facebook  -->
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/el_GR/sdk.js#xfbml=1&version=v17.0"
-        nonce="GduHlq5a"></script>
-
-
-    <title>Resume</title>
 </head>
 
 <body>
@@ -49,6 +43,7 @@
         <div class="row mt-5" id="gridS">
             <!-- Main Article Section -->
             <article class="col-md-8">
+                <h2>Προσωπική Ιστοσελίδα</h2>
                 <section id="about">
                     <h3>Βιογραφικό</h3>
                     <p>Αλέξανδρος Μάνος - Περιπτεράς</p>
@@ -95,21 +90,19 @@
                             </a>
 
                         </li>
-                        <br>
                         <li>
                             <h5>Gaming</h5>
                             <p> - Pro<a href="https://en.wikipedia.org/wiki/Tom_Clancy%27s_Rainbow_Six_Siege"
                                     target="_blank">
                                     Rainbow Six Siege</a> player</p>
                             <!-- Less than 1MB.... -->
-                            <video width="300px" controls muted>
+                            <video width="300" controls muted>
                                 <source src="video/gaming.mp4" type="video/mp4">
                                 <!-- I remove the webm file -->
                                 <source src="video/gaming.webm" type="video/webm">
 
                             </video>
                         </li>
-                        <br>
                         <li>
                             <h5>Συγγραφέας Παραμυθιών/Αφηγητής</h5>
                             <audio controls autoplay muted loop>
@@ -121,15 +114,16 @@
                             <p> - Αγαπημένο μου τραγούδι:</p>
                             <iframe width="420" height="315"
                                 src="https://www.youtube.com/embed/QZhSFzs24Jo?si=AQNHhv3uryuAuR1s&amp;start=30"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                title="YouTube video player" style="border: none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                                picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                                allowfullscreen>
+                            </iframe>
                         </li>
                     </ul>
                 </section>
             </article>
 
-            <!-- Sidebar ------- -->
+            <!-- Sidebar  -->
             <aside class="col-md-4">
                 <!--  -->
                 <section id="courses">
@@ -218,6 +212,10 @@
         </footer>
     </div>
 
+    <!-- Facebook  -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/el_GR/sdk.js#xfbml=1&version=v17.0"
+        nonce="GduHlq5a"></script>
 
     <script>
 
